--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,7 @@ html{
 	font:normal normal 12px Arial,Verdana,'Microsoft YaHei',sans-serif;
 	color: #333;
 }
-body,ul,ol,dl,p,h1,h2,h3,h4,h5,h6{
+body,ul,ol,dl,p,h1,h2,h3,h4,h5,h6,div{
 	margin: 0;
 	padding: 0;
 }
