--- a/css/yanxuancommon.css
+++ b/css/yanxuancommon.css
@@ -868,7 +868,7 @@
 .topfooter .link>ul>li:nth-child(2) .guanzhu .tubiao a:last-child i{
 	color: #e42f36;
 }
-.topfooter .link>ul>li:nth-child(2) .guanzhu .tubiao .erweima{
+.topfooter .link>ul>li:nth-child(2) .guanzhu .tubiao a>.erweima{
 	width: 103px;
 	height: 103px;
 	position: absolute;
