--- a/css/yanxuangouwuche.css
+++ b/css/yanxuangouwuche.css
@@ -92,3 +92,98 @@ div,li{
 	height: 22px;
 	text-align: center;
 }
+.content1 .neirong{
+	margin-top: 10px;
+	font-size: 13px;
+}
+.content1 .neirong .quanxuan{
+	padding: 12px 0;
+	background-color: #f5f5f5;
+	border: 1px solid #ededed;
+	text-align: center;
+	height: 47px;
+	line-height: 21px;
+	margin-bottom: 20px;
+}
+.content1 .neirong .quanxuan::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.content1 .neirong .quanxuan div{
+	float: left;
+}
+.content1 .neirong .quanxuan .left{
+	margin-left: 20px;
+	text-align: left;
+	width: 139px;
+}
+.content1 .neirong .quanxuan .left::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.content1 .neirong .quanxuan .left input{
+	width: 18px;
+	height: 18px;
+	float: left;
+	margin-top: 1px;
+}
+.content1 .neirong .quanxuan .left span{
+	margin-left: 14px;
+	display: block;
+	float: left;
+}
+.content1 .neirong .quanxuan .spxx{
+	text-align: left;
+	width: 300px;
+}
+.content1 .neirong .quanxuan .danjia{
+	width: 180px;
+}
+.content1 .neirong .quanxuan .shuliang{
+	width: 170px;
+}
+.content1 .neirong .quanxuan .xiaoji{
+	width: 150px;
+	text-align: right;
+	padding-right: 30px;
+}
+.content1 .neirong .quanxuan .caozuo{
+	width: 129px;
+	text-align: left;
+	padding-left: 31px;
+}
+.content1 .neirong .coudan{
+	padding: 0 30px 0 60px;
+	background-color: #fff8f0;
+	border: 1px solid #ededed;
+}
+.content1 .neirong .coudan>span:first-child{
+	width: 70px;
+	margin-top: 11px;
+	margin-right: 10px;
+	padding: 2px 5px;
+	background-color: #e36844;
+	color: #fff;
+	line-height: 20px;
+}
+.content1 .neirong .coudan>span:nth-child(2){
+	margin-right: 20px;
+	font-size: 14px;
+	line-height: 42px;
+	color: #666;
+}
+.content1 .neirong .coudan .btn{
+	margin-right: 20px;
+	width: 66px;
+	line-height: 22px;
+	border:  1px solid #e36844;
+	color: #e36844;
+	padding: 2px 10px;
+}
+.content1 .neirong .coudan .jx{
+	color: #69c;
+	font-size: 14px;
+	line-height: 42px;
+}
